Fix for advance search overlay

--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -1142,7 +1142,7 @@ time {
 
 /* Advanced Ticket Search */
 
-#overlay {
+#search_overlay {
     background:#000;
     position:absolute;
     display:none;
