--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -16,6 +16,10 @@ a {
     text-align:center;
 }
 
+.full-width {
+    width: 100%;
+}
+
 .clear {
     clear:both;
 }
@@ -1171,6 +1175,18 @@ time {
     height:250px;
 }
 
+#print-options hr {
+    height: 1px;
+    border: 0;
+    background: #aaa;
+    background: -moz-linear-gradient(left, rgba(170,170,170,0) 0%, rgba(170,170,170,1) 10%, rgba(170,170,170,1) 90%, rgba(170,170,170,0) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(170,170,170,0)), color-stop(10%,rgba(170,170,170,1)), color-stop(90%,rgba(170,170,170,1)), color-stop(100%,rgba(170,170,170,0))); /* Chrome,Safari4+ */
+    background: -o-linear-gradient(left, rgba(170,170,170,0) 0%,rgba(170,170,170,1) 10%,rgba(170,170,170,1) 90%,rgba(170,170,170,0) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(left, rgba(170,170,170,0) 0%,rgba(170,170,170,1) 10%,rgba(170,170,170,1) 90%,rgba(170,170,170,0) 100%); /* IE10+ */
+    background: linear-gradient(to right, rgba(170,170,170,0) 0%,rgba(170,170,170,1) 10%,rgba(170,170,170,1) 90%,rgba(170,170,170,0) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00aaaaaa', endColorstr='#00aaaaaa',GradientType=1 ); /* IE6-9 */
+}
+
 #advanced-search h3, #print-options h3 {
     color:#2a67ac;
     font-size:20px;
@@ -1188,7 +1204,7 @@ time {
 
 #advanced-search form, #print-options form {
     clear:both;
-    padding:2em 0 1em 0;
+    padding-top:2em;
     width:100%;
 }
 
@@ -1198,7 +1214,7 @@ time {
 
 #advanced-search fieldset, #print-options fieldset {
     margin:0;
-    padding:0.25em 0;
+    padding:0 0;
     border:none;
     overflow:hidden;
 }
