Move client information to separate formset
This moves client information like name and email address out of the general
dynamic forms data for a ticket. It really paves the way for the first-class
user of the future.

--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -1330,6 +1330,14 @@ time {
     background-position:bottom left;
 }
 
+/* Dynamic forms in dialogs */
+.dialog th {
+    background-color: #eee;
+    padding: 0.3em;
+    text-align: left;
+    padding-left: 1em;
+}
+
 #result-count div {
     padding:5px 10px;
     text-align:left;
