--- a/css/osticket.css
+++ b/css/osticket.css
@@ -43,3 +43,10 @@
     display: block;
     opacity: 0.3;
 }
+
+div.section-break {
+    margin-top: 1em;
+    margin-bottom: 0.5em;
+    padding-top: 0.8em !important;
+    border-top: 1px solid #ccc;
+}
