--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -1485,6 +1485,11 @@ input[type=text]:disabled, input[type=checkbox]:disabled {
     background-color: #eee;
 }
 
+
 input.dp {
     width: 10em;
+}
+
+.icon-warning-sign {
+    color: #d33;
 }
