--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -1350,9 +1350,10 @@ time {
 /* Dynamic forms in dialogs */
 .dialog th {
     background-color: #eee;
+    border: 1px dotted #bbb;
     padding: 0.3em;
     text-align: left;
-    padding-left: 1em;
+    padding-left: 0.3em;
 }
 
 #result-count div {
