Choices edit field should not be HTML

--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -541,7 +541,7 @@ a.print {
 }
 
 
-.form_table td.multi-line {
+td.multi-line {
     vertical-align:top;
     padding-top: 0.4em;
     padding-bottom: 0.4em;
