--- a/css/thread.css
+++ b/css/thread.css
@@ -161,33 +161,6 @@
 .thread-body cite {
   font-style: normal;
 }
-.thread-body .text-muted {
-  color: #999999;
-}
-.thread-body .text-primary {
-  color: #428bca;
-}
-.thread-body .text-warning {
-  color: #c09853;
-}
-.thread-body .text-danger {
-  color: #b94a48;
-}
-.thread-body .text-success {
-  color: #468847;
-}
-.thread-body .text-info {
-  color: #3a87ad;
-}
-.thread-body .text-left {
-  text-align: left;
-}
-.thread-body .text-right {
-  text-align: right;
-}
-.thread-body .text-center {
-  text-align: center;
-}
 .thread-body h1,
 .thread-body h2,
 .thread-body h3,
@@ -408,6 +381,98 @@
 .thread-body table th[class*="col-"] {
   float: none;
   display: table-cell;
+}
+
+/* Redactor consistency styles */
+.thread-body div,
+.thread-body p,
+.thread-body ul,
+.thread-body ol,
+.thread-body table,
+.thread-body dl,
+.thread-body blockquote,
+.thread-body pre {
+	font-size: 14px;
+	line-height: 1.25rem;
+}
+
+.thread-body div:not(.caption),
+.thread-body p,
+.thread-body ul,
+.thread-body ol,
+.thread-body table,
+.thread-body dl,
+.thread-body blockquote,
+.thread-body pre {
+	margin: 0;
+	margin-bottom: 10px !important;
+	border: none;
+	background: none !important;
+	box-shadow: none !important;
+}
+
+.thread-body iframe,
+.thread-body object,
+.thread-body hr {
+	margin-bottom: 15px !important;
+}
+
+.thread-body iframe {
+    display: block;
+	margin: 0;
+	padding: 0;
+}
+
+/* Styles or override ridiculous Microsoft Outlook list styles */
+.thread-body ul,
+.thread-body ol {
+	padding-left: 2em !important;
+}
+.thread-body ul ul,
+.thread-body ol ol,
+.thread-body ul ol,
+.thread-body ol ul {
+	margin: 2px !important;
+	padding: 0 !important;
+	padding-left: 2em !important;
+	border: none;
+}
+
+/* Styles to keep the thread-entry sizing sane */
+.thread-body img:not(.optional),
+.thread-body div.non-local-image {
+    width: auto;
+    height: auto;
+    max-width: 100%;
+}
+
+table.thread-entry {
+    table-layout: fixed;
+}
+
+/* Inline image hovering with download link */
+.image-hover {
+    display: inline-block;
+    position: relative;
+}
+.image-hover .caption {
+    background-color: rgba(0,0,0,0.5);
+    min-width: 20em;
+    color: white;
+    padding: 1em;
+    display: none;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+}
+.image-hover .caption .filename {
+    display: inline-block;
+    max-width: 60%;
+    overflow: hidden;
 }
 
 /* Additional style for the mighty Microsoft Office emails "standard" style */
