--- a/css/thread.css
+++ b/css/thread.css
@@ -409,6 +409,7 @@
 	border: none;
 	background: none !important;
 	box-shadow: none !important;
+    text-indent: 0 !important;
 }
 
 .thread-body iframe,
