--- a/css/thread.css
+++ b/css/thread.css
@@ -396,7 +396,21 @@
 	line-height: 1.25rem;
 }
 
-.thread-body div:not(.caption),
+/* Adjust plain/text messages posted as <pre> in the thread body to show in
+ * a more normal font. Other <pre> elements in the ticket thread body should
+ * be shown with the ususal monospace font
+ */
+.thread-body > div > pre:first-child {
+    font-family: sans-serif;
+}
+
+/* Avoid extra padding at the bottom of the thread body element */
+.thread-body :last-child,
+.thread-body > div {
+    margin-bottom: 0 !important;
+}
+
+.thread-body > div div:not(.caption),
 .thread-body p,
 .thread-body ul,
 .thread-body ol,
