ui: Fix large image display
Fixes oversize image display to be resized in both the ticket thread and
the redactor editor in (at least)

  * Ticket-view boxes
  * Client new-ticket form
  * Staff new ticket
  * Page add/edit
  * FAQ add/edit
  * Canned response add/edit

Fixes osTicket/osTicket-1.8#247

--- a/assets/default/css/theme.css
+++ b/assets/default/css/theme.css
@@ -568,6 +568,15 @@ label.required {
   position: relative;
   top: 6px;
 }
+#ticketForm > table {
+    table-layout: fixed;
+}
+#ticketForm > table td {
+    width: 160px;
+}
+#ticketForm > table td + td {
+    width: auto;
+}
 #ticketForm td textarea,
 #clientLogin td textarea,
 #ticketForm div textarea,
