--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -1034,6 +1034,7 @@ h2 .reload {
     position:absolute;
     top:0.3em;
     right:0.5em;
+    text-decoration:none;
 }
 
 .tip_shadow {
@@ -1068,7 +1069,6 @@ h2 .reload {
 .tip_menu li a {
     display:block;
     width:auto;
-    _width:0;
     float:left;
     padding:0 10px;
     border-right:1px solid #ddd;
