thread: Display thread meta-data without wrapping?
Change thread entry title bar to use more flexible layout using div's and
span's in hopes of avoiding unnecessary wrapping -- especially in the poster
name column..

--- a/css/thread.css
+++ b/css/thread.css
@@ -465,6 +465,19 @@ table.thread-entry {
     table-layout: fixed;
 }
 
+table.thread-entry th div span {
+    vertical-align: middle;
+}
+table.thread-entry th div :not(.title) {
+    font-weight: 600;
+}
+table.thread-entry th div .title {
+    font-weight: 400;
+}
+table.thread-entry th .textra {
+    margin-right: 1em;
+    display: inline-block;
+}
 /* Inline image hovering with download link */
 .image-hover {
     display: inline-block;
