--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -1577,7 +1577,8 @@ div.selected-signature .inner {
 }
 .action-button.danger {
     color: #999 !important;
-    background-color: rgba(220,220,220,0.5);
+    background: transparent;
+    border: 1px solid rgba(0,0,0,0.5);
     opacity: 0.6;
 }
 
@@ -1586,4 +1587,45 @@ div.selected-signature .inner {
     position: absolute;
     top: 4px;
     right: 5px;
+}
+
+.sortable-row-item {
+    border: 1px solid rgba(0, 0, 0, 0.7);
+    padding: 9px;
+    cursor: crosshair;
+    position: relative;
+}
+.sortable-row-item:hover {
+    background: rgba(0, 0, 0, 0.1);
+}
+.sortable-row-item:active {
+    background: rgba(0, 0, 0, 0.3);
+}
+.sortable-row-item:first-child {
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+}
+.sortable-row-item:last-child {
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+.sortable-row-item + .sortable-row-item {
+    margin-top: -1px;
+}
+
+.sortable-row-item .delete {
+    border-left: 1px solid rgba(0, 0, 0, 0.7);
+    border-top-right-radius: inherit;
+    border-bottom-right-radius: inherit;
+    position: absolute;
+    top: 0px;
+    right: 0;
+    padding: 9px;
+    padding-left: 12px;
+    font-size: 105%;
+}
+
+.sortable-row-item .delete:hover {
+    background: #fc9f41; /* Old browsers */
+    color: rgba(255,255,255,0.8) !important;
 }
