First steps for client login

--- a/assets/default/css/theme.css
+++ b/assets/default/css/theme.css
@@ -634,7 +634,7 @@ label.required {
 }
 #clientLogin p {
   clear: both;
-  text-align: center;
+  text-align: right;
 }
 #clientLogin strong {
   font-size: 11px;
