Profile update for clients

--- a/assets/default/css/theme.css
+++ b/assets/default/css/theme.css
@@ -870,3 +870,8 @@ a.refresh {
   color: #777;
   text-decoration: none;
 }
+table.padded tr > td,
+table.padded tr > th {
+  height: 20px;
+  padding-bottom: 5px;
+}
