--- a/assets/default/css/theme.css
+++ b/assets/default/css/theme.css
@@ -626,11 +626,13 @@ label.required {
   text-align: left;
 }
 #clientLogin {
-  width: 400px;
+    display: block;
   margin-top: 20px;
-  padding: 10px 100px 10px 10px;
+  padding: 20px;
   border: 1px solid #ccc;
-  background: url('../images/lock.png?1319655200') 440px 50% no-repeat #f6f6f6;
+  border-radius: 5px;
+  box-shadow: inset 0 1px 2px rgba(0,0,0,0.3);
+  background: url('../images/lock.png?1319655200') 95% 50% no-repeat #f6f6f6;
 }
 #clientLogin p {
   clear: both;
