Resurrect the ticket access link
This is the mode of the system if account registration is disabled

--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -12,6 +12,10 @@ a {
     text-decoration:none;
 }
 
+.form_table a:hover {
+    text-decoration: underline;
+}
+
 .centered {
     text-align:center;
 }
@@ -544,6 +548,7 @@ a.print {
 
 .form_table td {
     border-bottom:1px solid #ddd;
+    height: 20px;
 }
 
 table.fixed {
