Proofread Help Tips and Implement Links
- Proofread large portion of help tips.
- Implement help tip links in YAML files.
- Fix GUI spacing of some elements.
- Add <label> tags to a few form elements.

--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -1657,7 +1657,7 @@ tr.disabled th {
     font-weight: bold;
     text-transform: capitalize;
 }
-.doc-desc-option {
+.doc-desc-opt {
     font-style: italic;
 }
 
