Upgrade to Redactor 9.2.1

--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -1281,6 +1281,9 @@ time {
 .redactor_air {
     z-index: 7 !important;
 }
+.redactor_editor {
+    font-size: 11pt;
+}
 
 .dialog#advanced-search {
     width:640px !important;
