ui: Fix odd padding above custom form tables

--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -550,7 +550,7 @@ a.print {
     border-right:1px solid #ddd;
 }
 
-.form_table td {
+.form_table td:not(:empty) {
     border-bottom:1px solid #ddd;
     height: 20px;
 }
